# Copyright © Alex Forster <alex@alexforster.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "bpfasm"
version = "1.0.0-beta1"
description = "Berkley Packet Filter (BPF) assembler"
readme = "README.md"
authors = ["Alex Forster <alex@alexforster.com>"]
repository = "https://github.com/alexforster/bpfasm"
homepage = "https://github.com/alexforster/bpfasm"
keywords = ["bpf", "cbpf"]
categories = ["compilers", "parser-implementations", "network-programming"]
license = "MIT OR Apache-2.0"
edition = "2021"
build = "build.rs"

[dependencies]
pest = { version = "~2" } # MIT OR Apache-2.0
thiserror = { version = "~1" } # MIT OR Apache-2.0

[build-dependencies]
pest_generator = { version = "~2" } # MIT OR Apache-2.0
quote = { version = "~1" } # MIT OR Apache-2.0

[workspace]
members = [
    "fuzz"
]
