# Copyright © Alex Forster <alex@alexforster.com>
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "fuzz"
version = "0.0.0"
description = "Berkley Packet Filter (BPF) assembler"
readme = "README.md"
authors = ["Alex Forster <alex@alexforster.com>"]
repository = "https://github.com/alexforster/bpfasm"
homepage = "https://github.com/alexforster/bpfasm"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
bpfasm = { path = ".." }
honggfuzz = { version = "~0.5" }
